# ChangeLog for media-plugins/evas_generic_loaders
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/evas_generic_loaders/ChangeLog,v 1.10 2015/05/06 10:18:31 mrueg Exp $

  06 May 2015; Manuel Rüger <mrueg@gentoo.org>
  -evas_generic_loaders-1.7.4.ebuild, -evas_generic_loaders-1.7.9.ebuild,
  -evas_generic_loaders-1.8.1.ebuild:
  Remove old.

  27 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  evas_generic_loaders-1.12.0.ebuild:
  Re-add missing ~arm keyword

*evas_generic_loaders-1.12.0 (27 Dec 2014)

  27 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +evas_generic_loaders-1.12.0.ebuild:
  Version bump, fixes bug 529314, update gstreamer dependency to 1.0 for bug
  526692

  23 Feb 2014; Markus Meier <maekke@gentoo.org>
  evas_generic_loaders-1.8.1.ebuild:
  add ~arm, bug #499974

*evas_generic_loaders-1.8.1 (25 Jan 2014)

  25 Jan 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +evas_generic_loaders-1.8.1.ebuild:
  Version bump for move to efl-1.8

*evas_generic_loaders-1.7.9 (12 Nov 2013)

  12 Nov 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +evas_generic_loaders-1.7.9.ebuild:
  Version bump

*evas_generic_loaders-1.7.4 (21 Dec 2012)

  21 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -evas_generic_loaders-1.7.1.ebuild, +evas_generic_loaders-1.7.4.ebuild,
  metadata.xml:
  Version bump, drop old

  16 Dec 2012; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Drop no-herd from metadata.xml

  02 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org>
  evas_generic_loaders-1.7.1.ebuild:
  Pin gstreamer dependencies.

*evas_generic_loaders-1.7.1 (17 Nov 2012)

  17 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +evas_generic_loaders-1.7.1.ebuild, +metadata.xml:
  Initial commit