@@ -1,4 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST evas_generic_loaders-1.12.0.tar.bz2 215245 SHA256 981a6b70cfcc99c95936c835c9992735fcb004a99579e461ae64d2e28ea14f20 SHA512 9752fad43843c4fe2a86d8fcab00176f2dcb27888b84f57632add70a47daa4ab5775c0dcbd785e4a8b20b4ce09f4fd6f361128f166cd1f4753ac86afeb8443d5 WHIRLPOOL 4657ef9113d6e0255c26f65bceda87f29defccfbf7cdb803d722d9dbff1ff45721dd4287bc98dd79a06c3072756e062df9391bb5828657c950cbe0c3baf6a77c
-EBUILD evas_generic_loaders-1.12.0.ebuild 1105 SHA256 2efdefd0f7b94c3e798c9eab09b050238c7a01de054807a274bf7d7ad99bee40 SHA512 81b0e22532bb2bca456778f95aa38af37bfaa7cb767d17a5ab89a98255ef050ddab7c0d1882f70389dc9578c884a76bb264ede8f476061450e1c279739e34a3a WHIRLPOOL 5ebd77f8fb13a1f4524ac400f691c7d8b8f658d1dd8630a6e09d758b591e98cea542361c6e4877099b7bc3509c98a13497f0f116f1b29bd7e33d15834f3a5868
-MISC ChangeLog 1829 SHA256 ab1af1ac2adb72b03f3a8e57077f12bb4880ff5b075fd9a369504fa82d371e49 SHA512 d1e6294d7308233acacb25981ab77037922ebd98c41a5f88ca8570c3d80aff5f009e242875d5ee323367e2395ad7f4dab30e86a9fb5bc235bf72b737df430d09 WHIRLPOOL 6030df4323d6d78758235d96cdc56c63743a82839771414a72c94f9cf6972ddad8cc91c61576f87f483dd709f668cff8f7cc4ec5afaba1e1c7b28881bd379444
+EBUILD evas_generic_loaders-1.12.0.ebuild 1106 SHA256 ec09d91040bfd802d65e59852972aaf9c78a531fc63f45de66e128fa036e928a SHA512 77f5c80296f7f731d04c754b713941e742354ed642290f5ce5308a4621d5b889b5f9d0727b0f6bc5e0b5aaada6f6454767d8d480061c2295f176523a90ea85bf WHIRLPOOL f0bee1621e1adf88cd1b61ec20cabe6698b823306c3fbfcf4c093074413c80fc311c61436e266d39dc1b19edf62960e4e9ba9a45f5e34329b5bb652beb46e678
+MISC ChangeLog 1951 SHA256 2757b2f374f942fb535b1b58a914e33d22995b03846286f582e25839828930a0 SHA512 18e65864444cd3774fc2405748184f11595d4a352bc27585cb966679fc27456fc46258ac1674b5fdde284f87b160cb6c4f5163aa727bc0ae2a38c5e10f6b9eab WHIRLPOOL 8e909a39858b2bfbd2ae22c9ee9774a6590e9a0a4175a2af78ddebd322fc656a3ef83c84155ad339d83f2ffc0308ce595abb0229e272966d37c97f5f854f80bf
 MISC metadata.xml 166 SHA256 f6f84e7ad16649dcdcfe97ac44a4e858ac6e03efcf8d9e8e91264381632dbd0d SHA512 e489a45db03f6653ee0995e1c4262f3c5216a4e68b5afbdef69df8e80dca095d5a56461884541b27936241b17d4e0efdc0b821be45472eaef97ed6f0f9c4a461 WHIRLPOOL 0c51fe1dae0d5a3f76ef5c7e259aa2f6413b5bd21c633cc38d6313946de61cb58ff15864b1ee7b297afe751c1fbf9eebbee2f0e814f96d40f86e91ff03f0cd97
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVwt3eAAoJEPGu1DbS6WIAnzsP/32NWuObv9tKbi274yFm9xNp
+YOVoWYCQtiksPL4N3dtEJ1sUIciRjKhJ/TVlWpS133DT7LyoCULHI82Egy21/DxN
+BRzN5RZbVZ006gxgaUR4scFn8zk/G/NcxbuYCgX51p+lJvtHSXzHk1P/uJVGOs/m
+x7v6TWWAWxQNHTk/8LZn6IbSLxbvs/Q0C0T8sWsixzajBUTpbC76ts6dKhNKxwoU
+B5fw0Qlmgqsim1ugTEHMgNxDGQxqqEluJZwMihB2QkFpP7ZwEBKDqwof10UnQ69P
+YWpyits9rZZpn0/7lbDoBgQSiUlrGSs85IkquxpEYY/dlW+0O9fbLY4wN4/RhhVF
+3nfDaPrVXesMVWlMDeCWmLep0Y7al8NBgnWnNz5jpT3fWf0cj9saZEecuM05U6Mm
+Q8BKEbKr2nAs5c/STkkLsixuHnKNyLRnoTumE91Zf+4f4vayOCtBPexwCwuEO0Pq
+VFDaIMaHPZpWL/dVKkJgGtXS/xhEigdbjwzQG31pRRECRoDFoWz2AByaaK9Xm9l0
+vmpwHOS95kfNCIxNAQku9uwHYGHmq4nvBC6u/lnYYV0h9C1YADUimfiorEtjKsMp
+effSUdis93kfxxHwvjfjlBqtm+ULBnXBYuCtpEkiNy+94l302fb9P6pVduX1/Rwc
+p+3Mw+s+5IV7lTrs35Ic
+=5Wox
+-----END PGP SIGNATURE-----
