@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/evas_generic_loaders/evas_generic_loaders-1.12.0.ebuild,v 1.2 2014/12/27 19:41:13 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/evas_generic_loaders/evas_generic_loaders-1.12.0.ebuild,v 1.3 2015/08/06 04:08:51 vapier Exp $
 
 EAPI=5
 
@@ -12,7 +12,7 @@ DESCRIPTION="Provides external applications as generic loaders for Evas"
 HOMEPAGE="http://www.enlightenment.org/"
 SRC_URI="http://download.enlightenment.org/rel/libs/${PN}/${MY_P}.tar.bz2"
 
-LOCENSE="GPL-2"
+LICENSE="GPL-2"
 KEYWORDS="~amd64 ~arm ~x86"
 IUSE="gstreamer pdf postscript raw svg"
 
