@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/evas_generic_loaders
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/evas_generic_loaders/ChangeLog,v 1.10 2015/05/06 10:18:31 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/evas_generic_loaders/ChangeLog,v 1.11 2015/08/06 04:08:51 vapier Exp $
+
+  06 Aug 2015; Mike Frysinger <vapier@gentoo.org>
+  evas_generic_loaders-1.12.0.ebuild:
+  Fix typo in LICENSE variable.
 
   06 May 2015; Manuel Rüger <mrueg@gentoo.org>
   -evas_generic_loaders-1.7.4.ebuild, -evas_generic_loaders-1.7.9.ebuild,
